# neumonia-UAO

./: DISENO_DEL_SISTEMA.md  Dockerfile  Makefile  README.md  historial.csv  pyproject.toml
src/uao_neumonia/: __main__.py  main.py
src/uao_neumonia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/uao_neumonia/core/: integrator.py
src/uao_neumonia/core/io/: read_img.py
src/uao_neumonia/core/ml/: grad_cam.py  load_model.py  preprocess_img.py
src/uao_neumonia/ui/: detector_neumonia.py
src/uao_neumonia/utils/: paths.py
tests/: test_integrator.py  test_preprocess_img.py
