[project]
name = "uao-neumonia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "img2pdf>=0.6.3",
    "numpy>=2.4.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "numpy<2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "opencv-python>=4.13.0.92; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "opencv-python<4.9; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "pillow>=12.1.0",
    "pydicom>=3.0.1",
    "tensorflow>=2.20.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "tensorflow==2.14.*; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "tkcap>=0.0.4",
]

[project.scripts]
uao-neumonia = "uao_neumonia.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["uao_neumonia*"]
